--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <title>Birthday Surprise 🎉</title>
   <style>
+    /* 🌌 Background */
     body {
-      background: linear-gradient(135deg, #89cff0, #d0f0fd); /* soft blue gradient */
+      margin: 0;
+      padding: 0;
       font-family: 'Arial', sans-serif;
       text-align: center;
-      padding-top: 80px;
+      background: linear-gradient(135deg, #89cff0, #d0f0fd);
       overflow: hidden;
       height: 100vh;
       position: relative;
     }
 
+    /* 🎁 Card */
     .card {
       background: white;
       padding: 50px;
@@ -78,17 +81,46 @@
       color: #1e90ff;
     }
 
-    /* floating hearts */
-    .heart {
+    /* ✨ Floating doodles */
+    .doodle {
       position: absolute;
-      animation: float 6s linear infinite;
       pointer-events: none;
+      animation: float 6s linear infinite;
+      opacity: 0.8;
+    }
+
+    .star {
+      width: 15px;
+      height: 15px;
+      background: yellow;
+      clip-path: polygon(
+        50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%,
+        50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%
+      );
+    }
+
+    .cloud {
+      width: 25px;
+      height: 15px;
+      background: #fff;
+      border-radius: 50%;
+      box-shadow: 10px 0 0 #fff, -10px 0 0 #fff;
+    }
+
+    .sparkle {
+      width: 8px;
+      height: 8px;
+      background: #fff;
+      clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%,
+                         50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+      opacity: 0.6;
     }
 
     @keyframes float {
-      from { transform: translateY(100vh) rotate(0deg);}
-      to { transform: translateY(-10vh) rotate(360deg);}
+      from {transform: translateY(100vh) rotate(0deg);}
+      to {transform: translateY(-10vh) rotate(360deg);}
     }
+
   </style>
 </head>
 <body>
@@ -115,19 +147,21 @@ function showMsg(){
   msg.classList.add("show");
 }
 
-/* hearts generator */
-setInterval(() => {
-  const heart = document.createElement("div");
-  heart.className = "heart";
-  heart.innerHTML = "💙";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = (20 + Math.random() * 30) + "px";
-  heart.style.animationDuration = (4 + Math.random() * 3) + "s";
-  heart.style.transform = `rotate(${Math.random()*360}deg)`;
-  document.body.appendChild(heart);
+/* 🌟 Generate random doodles */
+const doodleTypes = ['star', 'cloud', 'sparkle'];
 
-  setTimeout(() => heart.remove(), 6000);
-}, 500);
+setInterval(() => {
+  const type = doodleTypes[Math.floor(Math.random() * doodleTypes.length)];
+  const doodle = document.createElement("div");
+  doodle.className = `doodle ${type}`;
+  doodle.style.left = Math.random() * 100 + "vw";
+  doodle.style.fontSize = (15 + Math.random()*15) + "px";
+  doodle.style.animationDuration = (4 + Math.random()*4) + "s";
+  doodle.style.transform = `rotate(${Math.random()*360}deg)`;
+  document.body.appendChild(doodle);
+
+  setTimeout(() => doodle.remove(), 6000);
+}, 400);
 </script>
 
 </body>
