--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       color: #1e90ff;
     }
 
-    /* ✨ Floating doodles */
+    /* Floating doodles */
     .doodle {
       position: absolute;
       pointer-events: none;
@@ -127,18 +127,19 @@
 
 <div class="card">
   <h1>🎂 Happy Birthday! 🎂</h1>
-  <p>Wishing you a day full of laughter, love, and endless happiness. 💙</p>
-  <p>May your dreams soar higher than the sky, and may every moment today be as special as you are.</p>
-  <p>Remember, life is brighter with your smile, and the world is luckier to have you in it. 🌟</p>
-  <p>Someone cares about you more than you know… and that’s why today is extra magical. 💖</p>
+  <p>Wishing you a day full of laughter, love, and endless happiness.</p>
+  <p>marchipovu ani anukuntunna i will always love you🤌🏻😭. Miss u the most</p>
+  <p>oii gurthupeetuku nuvvu ekkadunna nenu niku toduga untanu remember i will be always there with u 😭💕.</p>
+  <p>Remember, life is brighter with your smile, and the world is luckier to have you in it.</p>
+  <p>Someone cares about you more than you know… and that’s why today is extra magical.I LOVE YOUUUUU❤️❤️❤️</p>
 
-  <button onclick="showMsg()">Click for a Secret Message 💌</button>
+  <button onclick="showMsg()">Click for a Secret Message</button>
 
   <div class="secret" id="msg">
-    You’re truly amazing, and I hope this year brings you joy, adventure, and all the love you deserve. ✨
+    You’re truly amazing foer me , and I hope this year brings you joy, adventure, and no matter what i will always love you take care bangaram enjoy ur day.
   </div>
 
-  <p class="from">— from Joshita to Bangaram 💙</p>
+  <p class="from">— from Joshita to Bangaram💕</p>
 </div>
 
 <script>
@@ -147,8 +148,8 @@ function showMsg(){
   msg.classList.add("show");
 }
 
-/* 🌟 Generate only CSS doodles – NO HEARTS */
-const doodleTypes = ['star', 'cloud', 'sparkle'];
+/* Generate ONLY doodles – no hearts anywhere */
+const doodleTypes = ['cloud', 'sparkle'];
 
 setInterval(() => {
   const type = doodleTypes[Math.floor(Math.random() * doodleTypes.length)];
