--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <div class="card">
   <h1>Happy Birthday!</h1>
   <p>Wishing you a day full of laughter, love, and endless happiness.</p>
-  <p>marchipovu ani anukuntunna i will always love you. Miss u the most😭😭😭</p>
+  <p>marchipovu ani anukuntunna i will always love you. Miss u the most</p>
   <p>oii gurthupeetuku nuvvu ekkadunna nenu niku toduga untanu remember i will always be there with u.</p>
   <p>Remember, life is brighter with your smile, and the world is luckier to have you in it.</p>
   <p>Someone cares about you more than you know… and that’s why today is extra magical.</p>
@@ -144,7 +144,7 @@
   <button onclick="showMsg()">Click for a Secret Message</button>
 
   <div class="secret" id="msg">
-    You’re truly amazing for me, and I hope this year brings you joy, adventure, and no matter what, I will always love you❤️❤️❤️. Take care Bangaram, enjoy your day.
+    You’re truly amazing for me, and I hope this year brings you joy, adventure, and no matter what, I will always love you. Take care Bangaram, enjoy your day.
   </div>
 
   <p class="from">— from Joshita to Bangaram</p>
